examples/test/testpolicy13750.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13750
  namespace: namespace295
spec:
  podSelector:
    matchLabels:
      key3: value16
      key20: value47
      key8: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value31
      podSelector:
        matchLabels:
          key43: value32
